# compare_data_from_the_command_line

./: LICENCE.txt  README.md  pytest.ini  setup.cfg  setup.py
compare_df/: __init__.py  __main__.py  foos.py
src/: __main__.py  compare_df.py  foos.py
src/compare_df/: __init__.py  __main__.py  cli.py  foos.py
tests/: conftest.py  df_1_file.xlsx  df_2_file.xlsx  test_compare_df.py  test_foos.py  test_nb_integration.ipynb
