[metadata]
name = raph-compare-df
version = 0.3.0
description = An App to Compare Data from the Command Line
long_description = file: README.md
author=Raphael Bürki
author_email=r2d4@bluewin.ch
license = MIT License
keywords = Pandas, CSV, Excel
classifiers =
        "Programming Language :: Python :: 3"
        "Programming Language :: Python :: 3.6"
        "License :: OSI Approved :: MIT License"
        "Operating System :: OS Independent"

[options]
# zip_safe = False
# include_package_data = True
package_dir=
    =src
packages = find:
# exclude =
#     src.subpackage1
#     src.subpackage2

[options.packages.find]
where=src
scripts =
    bin/first.py
    bin/second.py
install_requires =
    pandas
    xlsxwriter
python_requires = >=3.6

[options.entry_points]
console_scripts =
    compare_df = compare_df.cli:cli

[options.package_data]
* = *.txt, *.rst
hello = *.msg

# [options.extras_require]

# [options.data_files]
